--- a/1.html
+++ b/1.html
@@ -13,7 +13,11 @@
     </div>
 
     <div>
-        <img src="1b.svg"/>
+        <img src="3b.svg"/>
+    </div>
+
+    <div>
+        <img src="2b.svg"/>
     </div>
 </body>
 </html>
