--- a/1.html
+++ b/1.html
@@ -19,5 +19,13 @@
     <div>
         <img src="2b.svg"/>
     </div>
+
+    <div>
+        <img src="4b.svg"/>
+    </div>
+
+    <div>
+        <img src="5b.svg"/>
+    </div>
 </body>
 </html>
